# api/swagger/swagger.yaml
@@ -962,6 +962,219 @@ paths:
                 "500":
                     description: "Internal serveur Error"
 
+    /role:
+        get:
+            tags:
+                - role
+            summary: "Affiche les roles"
+            description: "Affiche les roles trouver dans la table role de la base MySql"
+            responses:
+                "200":
+                    description: "Ok"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "role/get/responses/role.yaml"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+
+    /tag/{quantity}:
+        get:
+            tags:
+                - tag
+            summary: "Affiche les tags"
+            description: "Affiche les tags trouver dans la table tags de la base MySql"
+            parameters:
+                -   in: path
+                    name: quantity
+                    required: false
+                    schema:
+                        type: integer
+                        example: 2
+            responses:
+                "200":
+                    description: "Ok"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "role/get/responses/role.yaml"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+
+    /direction:
+        get:
+            tags:
+                - direction
+            summary: "Affiche les directions"
+            description: "Affiche les directions trouver dans la table directions de la base MySql"
+            responses:
+                "200":
+                    description: "Ok"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "direction/get/responses/direction.yaml"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+        post:
+            tags:
+                - direction
+            summary: "Crée une direction"
+            description: "Ajoute une direction dans la base MySql"
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: "direction/post/requests/direction.yaml"
+            responses:
+                "200":
+                    description: "Ok"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+        put:
+            tags:
+                - direction
+            summary: "Renomme une direction"
+            description: "Renomme une direction dans la base MySql"
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: "direction/put/requests/direction.yaml"
+            responses:
+                "200":
+                    description: "Ok"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+
+    /direction/{name}:
+        delete:
+            tags:
+                - direction
+            summary: "Supprime une direction"
+            description: "Supprime une direction de la table MySql"
+            parameters:
+                -   in: path
+                    name: name
+                    required: true
+                    schema:
+                        type: string
+                        example: Name
+            responses:
+                "200":
+                    description: "Ok"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+
+    /service:
+        get:
+            tags:
+                - service
+            summary: "Affiche les services"
+            description: "Affiche les services trouver dans la table services de la base MySql"
+            responses:
+                "200":
+                    description: "Ok"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "service/get/responses/service.yaml"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+        post:
+            tags:
+                - service
+            summary: "Crée une service"
+            description: "Ajoute une service dans la base MySql"
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: "service/post/requests/service.yaml"
+            responses:
+                "200":
+                    description: "Ok"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+        put:
+            tags:
+                - service
+            summary: "Renomme une service"
+            description: "Renomme une service dans la base MySql"
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: "service/put/requests/service.yaml"
+            responses:
+                "200":
+                    description: "Ok"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+
+    /service/{name}:
+        delete:
+            tags:
+                - service
+            summary: "Supprime un service"
+            description: "Supprime un service de la table MySql"
+            parameters:
+                -   in: path
+                    name: name
+                    required: true
+                    schema:
+                        type: string
+                        example: Name
+            responses:
+                "200":
+                    description: "Ok"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+
 components:
     securitySchemes:
         ApiKeyAuth:
